--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,18 @@ html, body {
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 125%;
   
 }
 .td, .th, .tr, .tbody {
 color: whitesmoke;
 background-color: whitesmoke;
 
+}
+
+.playIMG {
+  visibility: hidden;
+  width: 150px;
 }
 
 .footer {
